# poetry-example

./: pyproject.toml
example_package/: hello.py  manifold.py
