[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["Ryuji Watanabe <watanabe.ryuji717@mail.kyutech.jp>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.16"
matplotlib = "^3.1"

[tool.poetry.dev-dependencies]
ptpython = "^2.0"
ipython = "^7.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

packages = [
       {include="example_package"},
]
